Update on Overleaf.

--- a/abstract.tex
+++ b/abstract.tex
@@ -34,6 +34,7 @@
     introduced due to proxy voting.
     Finally, we attempt to determine how many proxies a voter should be allowed
     to delegate in order to increase the accuracy of the system.
+    \vicki{Do you mean over the course of the term?  It sounds like a voter may have more than one vote.}
     % TODO: Put in a bit of what we discover
 
 
