--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -438,6 +438,7 @@ More citations of previous work would be better. Even if you barely mention thei
 
 
 \section{Proposed Work}\label{sec:contribution}
+\Vicki{Try to be more specific about what you will do.  See the document "Previous Work Summary" in the 
 % \section{Contribution}\label{sec:contribution}
 This study aims to explore the impact the use of proxies has on a vote,
 particularly in the House of Representatives, where high accuracy and participation
