--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -438,7 +438,7 @@ More citations of previous work would be better. Even if you barely mention thei
 
 
 \section{Proposed Work}\label{sec:contribution}
-\Vicki{Try to be more specific about what you will do. You could even give a few results, while explaining how you intend to extend them.  Beca See the document "Previous Work Summary" in the Voting Articles folder.  }
+\Vicki{Try to be more specific about what you will do. You could even give a few results, while explaining how you intend to extend them.  Because I'm n See the document "Previous Work Summary" in the Voting Articles folder.  }
 
 % \section{Contribution}\label{sec:contribution}
 This study aims to explore the impact the use of proxies has on a vote,
