Answered abstract from 445986fdb88a8906e0a86db78acc5ffad37c01f3

--- a/abstract.tex
+++ b/abstract.tex
@@ -33,8 +33,8 @@
     increase the granularity of the results and determine how much error is
     introduced due to proxy voting.
     Finally, we attempt to determine how many proxies a voter should be allowed
-    to delegate in order to increase the accuracy of the system.
-    \vicki{Do you mean over the course of the term?  It sounds like a voter may have more than one vote.}
+    to delegate for an individual vote in order to increase the accuracy of the system
+    as compared to proxy voting with a single proxy.
     % TODO: Put in a bit of what we discover
 
 
