Fixed compilation issues

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -431,14 +431,15 @@ would produce a better result for the delegator.
 As such, we ask, if voters can delegate more than one proxy, how many proxies should
 they be allowed to delegate?
 \vicki{Is it "should" or how many are useful?  I'm guessing that more than 3 proxies is not that helpful.  I'm assuming the vote would be split equally?  Otherwise, it really isn't interesting as they could get their exact value.
-
+%
 More citations of previous work would be better. Even if you barely mention their accomplishments, it gives you credibility.}
 
 % TODO: Outline methods for performing analysis and test design
 
 
 \section{Proposed Work}\label{sec:contribution}
-\Vicki{Try to be more specific about what you will do. You could even give a few results, while explaining how you intend to extend them.  Because I'm not sure the extent of your plans, I keep seeing other possibilities:  See the document "Previous Work Summary" in the Voting Articles folder.  }
+\vicki{Try to be more specific about what you will do. You could even give a few
+results, while explaining how you intend to extend them.  Because I'm not sure the extent of your plans, I keep seeing other possibilities:  See the document "Previous Work Summary" in the Voting Articles folder.  }
 
 % \section{Contribution}\label{sec:contribution}
 This study aims to explore the impact the use of proxies has on a vote,
