Accepted run-on sentence rewrite

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -20,9 +20,9 @@ spread of COVID-19~\cite{Congress.gov2020}, as well as to pave the way for futur
 of proxy voting in other such emergencies.
 The type of proxy voting in Congress is not the traditional type of proxy vote.
 Instead, it is more similar to voting remotely, similar to how one might attend a
-meeting via video conference. Using proxy voting in such an important part of the
-legislative process, reignites the discussion on the effectiveness of proxy voting.
-\vicki{I split up the previous sentence.  See if it still has the meaning you intended.}
+meeting via video conference.
+Nevertheless, using proxy voting in such an important part of the legislative process,
+reignites the discussion on the effectiveness of proxy voting.
 Does proxy voting introduce too much error into the voting process?
 Or is it a viable alternative to direct voting?
 If proxy voting does introduce error, perhaps alternative voting mechanisms or systems
