Wrote some about reasons to use proxy voting

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -112,18 +112,15 @@ As will be discussed in the results section of the thesis,
 % \autoref{ch:results},  % TODO: Uncomment for thesis
 this additional system welfare comes at the cost of some system accuracy in terms of
 the actual preferences of the voters.
-This cost comes about because voters are generally unable to perfectly express their
-preference and so rely on their proxy to vote in a way that is close to their
-preference.
-Not all information can be restored through the use of a proxy since they are also
-unable to perfectly express their preference nor those of their delegator(s),
-\vicki{Unclear.  who is "they"?   What are you assuming about the proxy?  If my vote is .8, must I choose the nearest proxy?  Why don't I know the preference of the delegator?  Isn't the delgator the inactive voter?}
-which causes this information to be lost and the system's accuracy to suffer.
-However, if the results of the system are not too far from the optimal solution, then
-this loss of accuracy might be worth the additional system welfare produced by allowing
-agents delegate their vote.
-
-\vicki{Could we also claim that a certain percentage of the votes would be lost if no proxy were allowed?  In other words, someone may be genuinely unable to attend.}
+This cost comes about because proxies do not vote exactly the same as their delegators,
+which causes information about the delegators' preference to be lost and the system's
+accuracy to suffer.
+The loss in accuracy may be acceptable, however, if the system's welfare is sufficiently
+improved.
+Perhaps more importantly, proxy voting can also increase system accuracy when a
+sufficient number of agents are unable to vote in person, since it allows the system
+to recover some lost information by allowing agents to delegate their vote to a proxy
+with a similar preference.
 
 In some cases, the proxy is also able to transfer their own vote, as well as the rest of
 their delegated weight, to yet another proxy.
