Clarified budget -> budget amount

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -232,9 +232,8 @@ delegate funds in the United States Budget.
 However, as previously mentioned, we will only consider the idealistic situation
 where a congress member can choose their proxy for each topic individually.
 The model obviously allows for votes on topics that are continuous, such as setting the
-budget for the year: instead of simply voting yes or no on some pre-chosen budget,
-the output of the system can serve as the budget.
-\vicki{Better as "budget amount" - as budgets are more complicated.  If money was cut in half, funding for each item wouldn't be cut in half.}
+budget for the year: instead of simply voting yes or no on some pre-chosen dollar
+amount for a budget, the output of the system can serve as the budget amount.
 However, discrete and binary issues can be supported too, and there are multiple
 ways of interpreting the output of the model for such issues.
 For example, one could round the output to the nearest valid choice, such as a 1 or a
