Wrote more about voting on an interval

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -253,9 +253,13 @@ $[-0.25, 0.25]$, then it is likely that the majority of voters are not actually 
 satisfied by the law, but still believe some change is necessary.
 This provides a third option: refactoring the law to be more in line with the
 voters' opinions.
-\vicki{I like this option.  Without it, one might say they are diluting their vote by not being a strong yes or no.  I also wonder if there would be political pressure on someone who didn't vote definitively.  I suppose we could also claim that their actual  interval vote was private, but the public manifestation was the extreme.
-I think you need to discuss the ramifications of voting on an interval.
-}
+Such an option is extremely beneficial, since without it voters are encouraged to
+vote in the extremes.
+This is because anything less than an all-for or all-against vote would be diluted by
+those who did vote in the extremes, making the voice of the centrist voters less potent.
+With the refactoring option, however, if the population is truly ambivalent to the
+topic they would be encouraged to vote towards the center in order to show they want
+to rework the law.
 
 This study also makes use of \textit{voting mechanisms} or \textit{voting rules},
 which are functions that map a set of preferences in~\systemspace\ to an outcome that
