--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -264,6 +264,7 @@ to rework the law.
 This study also makes use of \textit{voting mechanisms} or \textit{voting rules},
 which are functions that map a set of preferences in~\systemspace\ to an outcome that
 also exists in~\systemspace.
+% TODO: List the voting mechanisms we will use
 %
 % \com{The idea of a voting mechanism did NOT start with Cohensius. Give credit to the
 % proper originator.}
