--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -297,7 +297,7 @@ the delegator.
 This may reduce the error introduced by using proxies and allow the agent to feel
 more secure that their voting power will be used as they desire.
 This is not an entirely novel idea, with other authors already creating models to
-handle it~\cite{Degrave2014,Colley2021,Golz2021}.
+handle such an approach~\cite{Degrave2014,Colley2021,Golz2021}.
 
 \subsection{Assumptions}\label{subsec:assumptions}
 In order to conduct this study, we make a number of assumptions.
