Clarification on what type of proxy voting is used

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -316,9 +316,8 @@ vote~\cite{CERP2020, Congress.gov2020}.
 This essentially turns proxy into a relay for the delegating voter, which is not how
 proxy voting is typically used and is not particularly useful.
 Instead, we consider scenarios where actual proxy voting is used, where the proxy
-receives the voting power of the delegating voter, and the proxy can vote
-however they choose.
-\vicki{Isn't the question whether we just change the weight of the proxy?  Are we assuming the proxy can say, "My votes are .8, .75, and .9.  I always assumed it was just the weight that changed, as otherwise it isn't interesting.  Why is proxy the way it is?  It does seem a bit simpler to just change the weight.  I think we need to make our assumptions clear earlier, as it affects your example Figure 1.1.}
+receives the voting power of the delegating voter, increasing their weight, and
+proceeds to votes according to their own preference.
 This requires the delegating voter to choose a proxy who they trust to vote as close
 to how they would as possible if only they were able to participate in the direct vote,
 similar to selecting experts as described in~\cite{Miller1969} and~\cite{Mueller1972}.
