Talked about Mathur2017's work

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -427,9 +427,11 @@ This is not unlike~\cite{Mathur2017}, who looked at several voting mechanisms ap
 on a single-winner election vote and determined a ranking for these mechanisms.
 Our work will differ significantly from theirs, however, as we will explore voting
 mechanisms used under proxy voting instead of single-winner elections, and most of
-our mechanisms will be different due to some incapability of the mechanisms the \vicki{they?} used
+our mechanisms will be different due to some incapability of the mechanisms they used
 on a continuous preference space.
-\vicki{Talk about their results here.}
+In their work, they discover that the Schulze and Minimax voting mechanisms always
+agree and beat all other mechanisms tested, while Borda beats Copeland and Plurality,
+and Plurality comes in last.
 
 We also look at how allowing a voter to delegate multiple proxies affects the vote,
 as described towards the end of \autoref{sec:setup-and-assumptions}.
