--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -425,13 +425,14 @@ This study will additionally look at voting mechanisms and attempt to determine 
 mechanism is best suited for proxy voting.
 This is not unlike~\cite{Mathur2017}, who looked at several voting mechanisms applied
 on a single-winner election vote and determined a ranking for these mechanisms.
-Our work will differ significantly from theirs, however, as we will explore voting
-mechanisms used under proxy voting instead of single-winner elections, and most of
-our mechanisms will be different due to some incapability of the mechanisms they used
-on a continuous preference space.
 In their work, they discover that the Schulze and Minimax voting mechanisms always
 agree and beat all other mechanisms tested, while Borda beats Copeland and Plurality,
 and Plurality comes in last.
+Our work will differ significantly from theirs, however, as we will explore voting
+mechanisms used under proxy voting instead of single-winner elections, and most of
+our mechanisms will be different due the mechanisms they used not being beneficial on
+a continuous preference space or with a small number of candidates, or not working well
+with proxy voting.
 
 We also look at how allowing a voter to delegate multiple proxies affects the vote,
 as described towards the end of \autoref{sec:setup-and-assumptions}.
